0.51 2021-07-04
- from_doc accepts kind2class to override SDL keyword - thanks @mangano-ito

0.50 2021-04-08
- Scalar.parse_value was wrong for Boolean - thanks @ccakes for report

0.49 2021-02-15
- type-checking only on direct MaybeTypeCheck use (#35) - thanks @ccakes

0.48 2021-02-05
- require Import::Into 1.002003 as we depend on module-loading

0.47 2021-02-02
- type-checking now only when Devel::StrictMode STRICT (#31) - thanks @ccakes
- can give default values to enums in queries (#33) - thanks @ccakes
- eliminate tail-call in type expansion - thanks @ccakes

0.46 2021-01-27
- PromiseCode example to interoperate with Promises - thanks @hitode909

0.45 2021-01-27
- Promise only needs then method - resolve/reject go via PromiseCode - thanks @hitode909 for prompt

0.44 2020-11-09
- Allow serialising already-blessed bools (#30) - thanks @ccakes

0.43 2020-11-07
- mutations now guaranteed to be executed in order - thanks @ccakes for prompt

0.42 2020-11-07
- List needed a perl_to_graphql method - thanks @schoeer for report
- so did InputObject

0.41 2020-08-05
- Scalar types now correctly handle null values

0.40 2020-05-09
- GraphQL::AsyncIterator->map_then now mutates object, returns self

0.39 2020-05-06
- simplify Int and Float implementations
- improve Boolean error-checking
- Convert::Test has an "echo" mutation and optional "timedEcho" subscription
- Subscriptions implemented

0.38 2019-12-08
- error objects now stringify - thanks @jjn1056 for idea
- more tests for directives - thanks @jjn1056
- Support field directives - thanks @yigarashi-9

0.37 2019-11-04
 - fix literal input-object coercion problem - thanks @ccakes
 - add "extensions" field to GraphQL::Error - thanks @cockscomb

0.36 2019-05-01
 - doc improvements

0.35 2019-04-29
 - remove author-mode stuff from affecting make in distro

0.34 2019-04-28
 - List now has "name" that is its "of"'s name

0.33	Thu 21 Feb 22:58:02 GMT 2019
 - update Plugin::Convert docs - thanks @aksonov